# DisplaceBaseline

./: .gitignore  README.md  diarization_scores.csv  pyproject.toml
language_diarization/code/: VBx.py  clustering.py  create_subseg.py  feat_extr.py  pyannote_vad.py  run_all.sh  score.py  seg2kaldi.py  trial_gamma_final.npy  trial_gamma_init.npy
output/: dev_whisp_feat.tsv  temp_posteriors  temp_segs
output/dev/: pyannote_vad_B007.pkl  pyannote_vad_B010.pkl  pyannote_vad_B014.pkl  pyannote_vad_B021.pkl  pyannote_vad_B022.pkl  pyannote_vad_B024.pkl  pyannote_vad_B025.pkl  pyannote_vad_B026.pkl  pyannote_vad_B034.pkl  pyannote_vad_B036.pkl  pyannote_vad_B038.pkl  pyannote_vad_B040.pkl  pyannote_vad_B042.pkl  pyannote_vad_B044.pkl  pyannote_vad_B046.pkl  pyannote_vad_B047.pkl  pyannote_vad_M016.pkl  pyannote_vad_M018.pkl  pyannote_vad_M019.pkl  pyannote_vad_M020.pkl  pyannote_vad_M022.pkl  pyannote_vad_M023.pkl  pyannote_vad_M026.pkl  pyannote_vad_M027.pkl  pyannote_vad_M028.pkl  pyannote_vad_M029.pkl  pyannote_vad_M030.pkl  pyannote_vad_M031.pkl  pyannote_vad_M032.pkl  pyannote_vad_M033.pkl  pyannote_vad_M037.pkl  pyannote_vad_M038.pkl  pyannote_vad_M039.pkl  pyannote_vad_M040.pkl  pyannote_vad_M043.pkl
output/dev_feat/: B007_output.npy  B010_output.npy  B014_output.npy  B021_output.npy  B022_output.npy  B024_output.npy  B025_output.npy  B026_output.npy  B034_output.npy  B036_output.npy  B038_output.npy  B040_output.npy  B042_output.npy  (+21 more)
speaker_diarization/: README.md  cmd.sh  path.sh  run.sh
tools/: install_kaldi.sh
vad_benchmarking/: run_pyannote_SAD.sh
(+178 files in other folders)
