[project]
name = "displace2024-baseline-updated-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dscore>=0.4.5",
    "fastcluster>=1.3.0",
    "ffmpeg>=1.4",
    "intervaltree>=3.1.0",
    "kaldi-io>=0.9.8",
    "openai-whisper>=20250625",
    "pyannote-audio>=3.4.0",
    "python-dotenv>=1.1.1",
]
